# convolutional_ar

./: .gitignore  README.md  requirements.txt  setup.py  texture.ipynb  texture_curet.ipynb  texture_kth-tips2-b.ipynb  texture_kylberg.ipynb  vectors_kth.npy
convolutional_ar/: interp.py  lstsq.py  model.py  nn.py  psd.py  reshape.py  version.py
convolutional_ar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
convolutional_ar/tests/: test_interp.py  test_nn.py  test_reshape.py
docs/: learning_kernels.ipynb  tutorial.ipynb
segmentation/: 3D-TransUNet.ipynb  pyproject.toml
segmentation/notebooks/: 01_openneuro.ipynb  02_hcp.ipynb  03_train.ipynb  04_train_freesurfer_versions.ipynb  05_test_evaluation.ipynb  06_test_evaluation_freesurfer_versions.ipynb  07_check.ipynb
segmentation/segmentation/: api.py  config.py  convert.py  data.py  fs_experiments.py  metrics.py  model.py  plot.py  segmentation.py  utils.py
